# PurplxEngine

./: CMakeLists.txt  README.md
include/Purplx/: Mesh.h  Purplx.h
include/glad/: glad.h
lib/: glad.c
src/: Mesh.c  Purplx.c  main.c
